adding typeorm and ts

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "assessment---sassy",
-  "version": "1.0.0",
-  "description": "Build a RESTful API for a simple task management system.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sajeedkannoje/Assessment---Sassy.git"
-  },
-  "author": "sajeed kannoje",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sajeedkannoje/Assessment---Sassy/issues"
-  },
-  "homepage": "https://github.com/sajeedkannoje/Assessment---Sassy#readme"
+   "name": "MyProject",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "type": "commonjs",
+   "devDependencies": {
+      "ts-node": "10.9.1",
+      "@types/node": "^16.11.10",
+      "typescript": "4.5.2"
+   },
+   "dependencies": {
+      "typeorm": "0.3.20",
+      "reflect-metadata": "^0.1.13",
+      "mysql": "^2.14.1"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   }
 }
