--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.9.1",
       "@types/node": "^16.11.10",
+      "ts-node": "10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.20",
+      "bcryptjs": "^2.4.3",
+      "cors": "^2.8.5",
+      "express": "^4.18.3",
+      "jsonwebtoken": "^9.0.2",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
-      "mysql": "^2.14.1"
+      "typeorm": "0.3.20"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
