--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@types/express": "^4.17.21",
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
       "express": "^4.18.3",
@@ -19,6 +20,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "build": "tsc && node dist/index.js"
    }
 }
