adding type casting

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-JWT_SECRET="test"
+JWT_SECRET="sassy"
+
+# Database
+
+DB_HOST = "localhost"
+DB_USER = "bug"
+DB_NAME = "sassy"
+DB_PASSWORD = ""
+DB_PORT =3306
