--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
-      "ts-node": "10.9.1",
+      "nodemon": "^3.1.0",
+      "ts-node": "^10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
@@ -20,6 +21,7 @@
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "dev": "nodemon --exec ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
       "build": "tsc && node dist/index.js"
    }
