--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-   "name": "MyProject",
+   "name": "sassy-orm",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "@types/node": "^16.11.10",
-      "nodemon": "^3.1.0",
-      "ts-node": "^10.9.1",
-      "typescript": "4.5.2"
+     "@types/node": "^18.11.18"
    },
    "dependencies": {
       "@types/express": "^4.17.21",
