--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-     "@types/node": "^18.11.18"
    },
    "dependencies": {
       "@types/express": "^4.17.21",
@@ -20,6 +19,6 @@
       "start": "ts-node src/index.ts",
       "dev": "nodemon --exec ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "build": "tsc && node dist/index.js"
+      "build": "tsc && node build/index.js"
    }
 }
