--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-JWT_SECRET="sassy"
+DB_NAME="sajeed_sassy"
+DB_PORT="1433"
+DB_HOST="sajeed.database.windows.net"
+DB_PASSWORD="$@jeed18"
+DB_USER="sajeed"
 
-# Database
-
-DB_HOST = "localhost"
-DB_USER = "bug"
-DB_NAME = "sassy"
-DB_PASSWORD = ""
-DB_PORT =3306
+JWT_SECRET=sassy
