--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
-   "devDependencies": {
-   },
    "dependencies": {
       "@types/express": "^4.17.21",
       "bcryptjs": "^2.4.3",
@@ -13,6 +11,7 @@
       "jsonwebtoken": "^9.0.2",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.9.2",
       "typeorm": "0.3.20"
    },
    "scripts": {
